--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+body{
+    background-image: url("images/background.jpg");
+    background-size: 100%;
+}
+
+main{
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+    align-items: center;
+}
+
 .panel{
     width: 660px;
     height: 440px;
-    margin: 0 auto;
     background-color: #808080;
     display: flex;
 
@@ -33,7 +44,6 @@
     color: burlywood;
     opacity: 0.8;
 }
-
 
 .press{
     background-color: #fde910;
